--- a/botload/package.json
+++ b/botload/package.json
@@ -9,8 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apify": "^3.0.2",
     "express": "^4.18.1",
-    "supervisor": "^0.12.0"
+    "playwright": "^1.25.0"
   },
   "description": ""
 }
